# omi-rest-api-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/omi_rest_api_gateway/: __init__.py  __main__.py  dependencies.py  main.py
src/omi_rest_api_gateway/api/: router.py
src/omi_rest_api_gateway/api/v1/: health.py  omi.py
src/omi_rest_api_gateway/clients/: omi.py
src/omi_rest_api_gateway/core/: config.py  exceptions.py  logging.py
src/omi_rest_api_gateway/schemas/: common.py  omi.py
src/omi_rest_api_gateway/services/: omi.py
tests/: conftest.py  test_health.py  test_omi.py
